# cpghmm

./: .gitignore  CMakeLists.txt  README.md
example/: n_state_4.n_category_11.emission.wg.avg  n_state_4.n_category_11.transition.wg.avg
src/: brent_obj.h  commands.cpp  cpghmm.cpp  cramore.h  cthmm.cpp  cthmm.h  methy_infer.cpp  params.h  tsv_reader.cpp  tsv_reader.h  utils.cpp  utils.h
